# ai_wrap

./: .env.example  .gitignore  .vercelignore  DEPLOY_VERCEL.md  Dockerfile  README-deploy-vercel.md  README.md  VERCEL_CHECKLIST.md  VERCEL_DEPLOY.md  app.py  deploy.sh  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
backend/: api.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatMessage.css  ChatMessage.js  EmptyState.css  EmptyState.js  ModelSelector.css  ModelSelector.js  SegmentedControl.css  SegmentedControl.js  ThemeToggle.css  ThemeToggle.js  TokenSlider.css  TokenSlider.js
frontend/src/services/: api.js
gemini_wrapper/: __init__.py  cli.py  client.py  config.py  sync_client.py  utils.py
